examples/test/testpolicy6812.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy6812
  namespace: namespace193
spec:
  podSelector:
    matchLabels:
      key27: value20
      key26: value10
      key3: value37
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key29: value2
      podSelector:
        matchLabels:
          key20: value49
